--- a/src/components/sections/form/form-component-styles.css
+++ b/src/components/sections/form/form-component-styles.css
@@ -1,36 +1,71 @@
-.form-wrapper{background:linear-gradient(to left, rgba(52, 58, 64, 0.8), rgba(33, 37, 41, 0.8)),url("../../../assets/images/BDAbstrak.jpg") center/cover no-repeat;background-blend-mode:overlay;animation:fadeIn 1.5s ease-in-out forwards;transform:translateY(30px);opacity:0}@keyframes fadeIn{to{transform:translateY(0);opacity:1}}/*# sourceMappingURL=form-component-styles.css.map */
+.form-wrapper {
+  background: linear-gradient(
+      to left,
+      rgba(52, 58, 64, 0.8),
+      rgba(33, 37, 41, 0.8)
+    ),
+    url("../../../assets/images/BDAbstrak.jpg") center/cover no-repeat;
+  background-blend-mode: overlay;
+  animation: fadeIn 1.5s ease-in-out forwards;
+  transform: translateY(30px);
+  opacity: 0;
+}
+@keyframes fadeIn {
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+} /*# sourceMappingURL=form-component-styles.css.map */
 
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000; /* Ensure it's above other elements */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it's above other elements */
 }
 
 .modal-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .close-button {
-    padding: 10px 15px;
-    background-color: transparent;
-    border: 2px solid #007bff; /* Example color */
-    color: #007bff;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease;
+  padding: 10px 15px;
+  background-color: transparent;
+  border: 2px solid #007bff; /* Example color */
+  color: #007bff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
 
-    &:hover {
-        background-color: #007bff;
-        color: white;
-    }
+  &:hover {
+    background-color: #007bff;
+    color: white;
+  }
 }
+.form-wrapper {
+  background: linear-gradient(
+      to left,
+      rgba(52, 58, 64, 0.8),
+      rgba(33, 37, 41, 0.8)
+    ),
+    url("../../../assets/images/BDAbstrak.jpg") center/cover no-repeat;
+  background-blend-mode: overlay;
+  animation: fadeIn 1.5s ease-in-out forwards;
+  transform: translateY(30px);
+  opacity: 0;
+}
+@keyframes fadeIn {
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+} /*# sourceMappingURL=form-component-styles.css.map */
