--- a/src/components/sections/criteria/criteria-styles.css
+++ b/src/components/sections/criteria/criteria-styles.css
@@ -3,4 +3,4 @@
 }
 .tips-for-managing-blood-loss{
     background:linear-gradient(to left, rgba(233, 30, 99, 0.7), rgba(156, 39, 176, 0.7)),url("../../../assets/images/bd4.jpg") center/cover no-repeat
-}/*# sourceMappingURL=criteria-styles.css.map */
+}
