--- a/src/components/sections/form/form-component-styles.css
+++ b/src/components/sections/form/form-component-styles.css
@@ -15,7 +15,7 @@
     transform: translateY(0);
     opacity: 1;
   }
-} /*# sourceMappingURL=form-component-styles.css.map */
+}
 
 .modal-overlay {
   position: fixed;
@@ -23,11 +23,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Ensure it's above other elements */
+  z-index: 1000;
 }
 
 .modal-content {
@@ -40,7 +40,7 @@
 .close-button {
   padding: 10px 15px;
   background-color: transparent;
-  border: 2px solid #007bff; /* Example color */
+  border: 2px solid #007bff;
   color: #007bff;
   border-radius: 5px;
   cursor: pointer;
@@ -68,4 +68,4 @@
     transform: translateY(0);
     opacity: 1;
   }
-} /*# sourceMappingURL=form-component-styles.css.map */
+}
